fix for weatherford socials on mobile

--- a/web/sites/wdnonline.etypegoogle7.com/themes/wdnonline/site.scss
+++ b/web/sites/wdnonline.etypegoogle7.com/themes/wdnonline/site.scss
@@ -86,4 +86,7 @@ footer {
     visibility: hidden;
     display: none;
   }
+  #main-nav .navbar .navbar-end {
+    top: -3.4rem;
+  }
 }
